# Ragado

./: README.md
admin-panel/: package-lock.json  package.json
admin-panel/app/: globals.css  layout.tsx  page.tsx
admin-panel/app/dashboard/: page.tsx
admin-panel/components/ui/: badge.tsx
admin-panel/context/: AuthContext.tsx
admin-panel/lib/: api.ts
ragado/: package-lock.json  package.json  pnpm-lock.yaml
ragado/app/: globals.css  layout.tsx  page.tsx
ragado/components/: Footer.tsx  Header.tsx  HomeScreen.tsx  SuccessScreen.tsx
ragado/components/form/: ClassesOfBusinessStep.tsx  ClientMoneyStep.tsx  ConsentsStep.tsx  FirmDetailsStep.tsx  FormContainer.tsx  RegulatoryStep.tsx
ragado/components/ui/: input.tsx  textarea.tsx
ragado/context/: FormContext.tsx
ragado/lib/: api.ts
server/: .env.example  .env.prod.example  .gitignore  Dockerfile  Dockerfile.prod  Makefile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  package-lock.json  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 54bae240a4b9_initial_schema.py  add_admin_users_table.py  add_refresh_tokens_table.py
server/api/: __init__.py  auth.py
server/api/routes/: __init__.py  applications.py  auth.py
server/config/: __init__.py  database.py  settings.py
server/models/: __init__.py  models.py
server/schemas/: __init__.py  application.py
